--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.44.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "get-youtube-id": "^1.0.1",
     "react": "^18.2.0",
